# mcp-mysql-server

./: Cargo.toml  README.md  build_errors.txt  config.json  errors.txt
PRD/: biz_pc16n_corn_job_analysis.md  requirements.md
src/: config.rs  db.rs  main.rs  mcp.rs
